--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Codrop | Landing Page App Template</title>
+  <title>Inclusive Taiwan Identification Number Validation</title>
   <meta name="description" content="">
   <script src="{% static 'scripts/jquery.min.js' %}"></script>
   <script src="{% static 'scripts/main.js' %}"></script>
@@ -190,6 +190,18 @@ function isValid(id) {
               <tbody>
                 <tr>
                   <td><a href="#">Taiwan Railways</a></td>
+                  <td>Transportation</td>
+                  <td>12/29/2020</td>
+                  <td>C</td>
+                  <td>
+                    <ul>
+                      <li>Separate UI for citizen/non-citizen ID handling</li>
+                      <li>Partial service restriction for non-citizens</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="#">Taiwan HSR</a></td>
                   <td>Transportation</td>
                   <td>12/29/2020</td>
                   <td>C</td>
