--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -130,9 +130,10 @@
             <li><a href="#">Python</a></li>
             <li><a href="#">PHP</a></li>
             <li><a href="#">Go</a></li>
+            <li><a href="#">Java</a></li>
           </ul>
           <div class="panel active">
-            <pre><code class="language-js">ID_REGEX = /^[A-Z]{1}[A-Z0-9]{1}[0-9]{8}$/;
+            <pre><code class="language-js">ID_REGEX = /^[A-Z]{1}[A-D0-9]{1}[0-9]{8}$/;
 ID_LETTERS = 'ABCDEFGHJKLMNPQRSTUVXYWZIO';
 
 function isValid(id) {
@@ -163,7 +164,7 @@ function isValid(id) {
 <pre><code class="language-python">import math
 import re
 
-ID_REGEX = '^[A-Z]{1}[A-Z0-9]{1}[0-9]{8}$';
+ID_REGEX = '^[A-Z]{1}[A-D0-9]{1}[0-9]{8}$';
 ID_LETTERS = 'ABCDEFGHJKLMNPQRSTUVXYWZIO';
 
 def isValid(id_no):
@@ -192,6 +193,9 @@ def isValid(id_no):
         return False
 </code></pre>
 
+          </div>
+          <div class="panel">
+            <h2>Coming soon</h2>
           </div>
           <div class="panel">
             <h2>Coming soon</h2>
