--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -224,7 +224,7 @@ def isValid(id_no):
               </thead>
               <tbody>
                 <tr>
-                  <td><a href="#">Taiwan Railways</a></td>
+                  <td><a href="https://www.railway.gov.tw/tra-tip-web/tip/tip001/tip121/query">Taiwan Railways</a></td>
                   <td>Transportation</td>
                   <td>12/29/2020</td>
                   <td>C</td>
@@ -236,7 +236,7 @@ def isValid(id_no):
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#">Taiwan HSR</a></td>
+                  <td><a href=""https://irs.thsrc.com.tw/IMINT/>Taiwan HSR</a></td>
                   <td>Transportation</td>
                   <td>12/29/2020</td>
                   <td>C</td>
@@ -244,6 +244,67 @@ def isValid(id_no):
                     <ul>
                       <li>Separate UI for citizen/non-citizen ID handling</li>
                       <li>Partial service restriction for non-citizens</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="http://myname.pchome.com.tw/">PCHome MyName</a></td>
+                  <td>Internet</td>
+                  <td>12/09/2020</td>
+                  <td>F</td>
+                  <td>
+                    <ul>
+                      <li>Online service fully restricted to citizens</li>
+                      <li>Resident ID numbers not accepted</li>
+                      <li>After contacting support, residents are asked to fax photocopies of ID.</li>
+                    </ul>
+                  </td>
+                </tr>
+                 <tr>
+                  <td><a href="https://signin.104.com.tw/register">104.com.tw Registration</a></td>
+                  <td>Internet</td>
+                  <td>12/09/2020</td>
+                  <td>F</td>
+                  <td>
+                    <ul>
+                      <li>Resident ID numbers not accepted</li>
+                    </ul>
+                  </td>
+                </tr>
+                 <tr>
+                  <td><a href="https://tvrs.ntpd.gov.tw/#events/index">New Taipei City Police Traffic Offense Report</a></td>
+                  <td>Government</td>
+                  <td>12/09/2020</td>
+                  <td>F</td>
+                  <td>
+                    <ul>
+                      <li>Resident ID numbers not accepted</li>
+                      <li>Residents are asked to provide a scan of their ID.</li>
+                    </ul>
+                  </td>
+                </tr>
+                 <tr>
+                  <td><a href="https://www.hpb.gov.tw/p/412-1000-116.php?Lang=zh-tw">Highway Police Traffic Offense Report</a></td>
+                  <td>Government</td>
+                  <td>12/09/2020</td>
+                  <td>F</td>
+                  <td>
+                    <ul>
+                      <li>Separate UI for citizen/non-citizen ID handling</li>
+                      <li>Resident ID numbers not accepted.</li>
+                      <li>Residents have made repeated complaints, with no change.</li>
+                    </ul>
+                  </td>
+                </tr>
+                 <tr>
+                  <td><a href="https://prsweb.tcpd.gov.tw/#/New">Taipei City Police Traffic Offense Report</a></td>
+                  <td>Government</td>
+                  <td>12/09/2020</td>
+                  <td>D</td>
+                  <td>
+                    <ul>
+                      <li>Old-format resident ID numbers accepted.</li>
+                      <li>New-format resident ID numbers not accepted.</li>
                     </ul>
                   </td>
                 </tr>
