Fix PHP bug - missing uppercase conversion.
PHP code did not convert ID strings to upper case before working
on them, unlike the other examples.

--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -204,6 +204,7 @@ define("ID_LETTERS", 'ABCDEFGHJKLMNPQRSTUVXYWZIO');
 function isValid($id_no)
 {
 
+  $id_no = strtoupper($id_no);
   if (preg_match(ID_REGEX, $id_no) != 1)
   {
     return false;
