--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -240,39 +240,35 @@ function isValid($id_no)
             <h2>Coming soon</h2>
           </div>
           <div class="panel">
-<pre><code class="language-java">public class validid {
+<pre><code class="language-java">public class ValidId {
 
-static String ID_REGEX = "^[A-Z]{1}[A-D0-9]{1}[0-9]{8}$";
-static String ID_LETTERS = "ABCDEFGHJKLMNPQRSTUVXYWZIO";
+  static final String ID_REGEX = "^[A-Z]{1}[A-D0-9]{1}[0-9]{8}$";
+  static final String ID_LETTERS = "ABCDEFGHJKLMNPQRSTUVXYWZIO";
 
-public static boolean isValid(String id_no)
-{
-  id_no = id_no.toUpperCase();
+  public static boolean isValid(String idNo) {
+    idNo = idNo.toUpperCase();
 
-  if (!id_no.matches(ID_REGEX))
-  {
-    return false;
-  }
+    if (!idNo.matches(ID_REGEX)) {
+      return false;
+    }
 
-  int letterIndex = ID_LETTERS.indexOf(id_no.charAt(0));
-  int checksum = (int) Math.floor(letterIndex / 10 + 1) + (letterIndex * 9);
+    int letterIndex = ID_LETTERS.indexOf(idNo.charAt(0));
+    int checksum = (int) Math.floor(letterIndex / 10 + 1) + (letterIndex * 9);
   
-  // Legacy ARC
-  if (Character.isLetter(id_no.charAt(1)))
-  {
-    checksum += (ID_LETTERS.indexOf(id_no.charAt(1)) % 10) * 8;
-  } else {
-    checksum += Character.getNumericValue(id_no.charAt(1)) * 8;
-  }
+    // Legacy ARC
+    if (Character.isLetter(idNo.charAt(1))) {
+      checksum += (ID_LETTERS.indexOf(idNo.charAt(1)) % 10) * 8;
+    } else {
+      checksum += Character.getNumericValue(idNo.charAt(1)) * 8;
+    }
 
-  for (int i = 2 ; i < 9 ; i++) {
-    checksum += (9 - i) * Character.getNumericValue(id_no.charAt(i));
-  }
-  checksum += Character.getNumericValue(id_no.charAt(9));
+    for (int i = 2 ; i < 9 ; i++) {
+      checksum += (9 - i) * Character.getNumericValue(idNo.charAt(i));
+    }
+    checksum += Character.getNumericValue(idNo.charAt(9));
  
-  return checksum % 10 == 0;
-}
-
+    return checksum % 10 == 0;
+  }
 }</code></pre>
 
           </div>
