Add some page anchors
That way people can link directly to the transparency report.

--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -83,7 +83,7 @@
 			<div class="container">
 				<div class="row  align-items-center">
 					<div class="col-lg-6" data-anima="fade-left" data-time="1000">
-						<h2>Hosted Validation Service</h2>
+						<h2 id="validation-service">Hosted Validation Service</h2>
 						<p>
 							This ID number validation API covers all forms of legal resident 
 							ID numbers and is provided free of charge.
@@ -121,7 +121,7 @@
 		</section>
 		<section class="section-base section-libraries">
       <div class="container">
-        <h2>Validation Libraries</h2>
+        <h2 id="validation-libraries">Validation Libraries</h2>
         <p>These libraries cover all forms of legal resident ID numbers. Choose
         your language:</p>
         <div class="library-languages tab-box tab-vertical" data-tab-anima="fade-in">
@@ -279,7 +279,7 @@ function isValid($id_no)
 			<div class="container">
 			  <div class="row">
           <div class="col-lg-12">
-            <h2>Transparency Report</h2>
+            <h2 id="transparency-report">Transparency Report</h2>
             <p>See how online service providers compare.</p>
             <table class="report-table table table-border">
               <thead>
