--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -1,4 +1,5 @@
-﻿{% load static %}
+﻿{% load i18n %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Inclusive Taiwan Identification Number Validation</title>
+  <title>{% trans "Inclusive Taiwan Identification Number Validation" %}</title>
   <meta name="description" content="">
   <script src="{% static 'scripts/jquery.min.js' %}"></script>
   <script src="{% static 'scripts/main.js' %}"></script>
@@ -32,10 +33,10 @@
             <hr class="space" />
             <hr class="space-lg" />
             <h1>
-              Inclusive Taiwan Identification Number Validation
+              {% trans "Inclusive Taiwan Identification Number Validation" %}
             </h1>
             <p>
-              Tools for ensuring everyone has equal access to online services and platforms.
+              {% trans "Tools for ensuring everyone has equal access to online services and platforms." %}
             </p>
           </div>
           <div class="col-lg-6 hidden-md" style="width: 100%; height: 100%; background-image: url({% static 'media/phone-wall2.png' %}); background-position: 0 -100px; background-size: 650px;"></div>
@@ -51,8 +52,8 @@
 								<div class="cnt-box cnt-box-top-icon align-center" data-href="#">
 									<i class="im-cloud"></i>
 									<div class="caption">
-										<h2>Validation API</h2>
-										<p>Free hosted validation service</p>
+										<h2>{% trans "Validation API" %}</h2>
+										<p>{% trans "Free hosted validation service" %}</p>
 									</div>
 								</div>
 							</td>
@@ -60,8 +61,8 @@
 								<div class="cnt-box cnt-box-top-icon align-center" data-href="#">
 									<i class="im-library-2"></i>
 									<div class="caption">
-										<h2>Libraries</h2>
-										<p>Validation libraries for major software languages</p>
+										<h2>{% trans "Libraries" %}</h2>
+										<p>{% trans "Validation libraries for major software languages" %}</p>
 									</div>
 								</div>
 							</td>
@@ -69,8 +70,8 @@
 								<div class="cnt-box cnt-box-top-icon align-center" data-href="#">
 									<i class="im-spell-check"></i>
 									<div class="caption">
-										<h2>Transparency Report</h2>
-										<p>See how online platforms compare</p>
+										<h2>{% trans "Transparency Report" %}</h2>
+										<p>{% trans "See how online platforms compare" %}</p>
 									</div>
 								</div>
 							</td>
@@ -83,17 +84,17 @@
 			<div class="container">
 				<div class="row  align-items-center">
 					<div class="col-lg-6" data-anima="fade-left" data-time="1000">
-						<h2 id="validation-service">Hosted Validation Service</h2>
+						<h2 id="validation-service">{% trans "Hosted Validation Service" %}</h2>
 						<p>
-							This ID number validation API covers all forms of legal resident 
-							ID numbers and is provided free of charge.
+							{% trans "This ID number validation API covers all forms of legal resident 
+							ID numbers and is provided free of charge." %}
 						</p>
 						
-						<h3>Example request:</h3>
+						<h3>{% trans "Example request:" %}</h3>
 						
 						<pre><code class="language-js">https://v.identity.tw?id=G112233445</code></pre>
 						
-						<h3>Example response:</h3>
+						<h3>{% trans "Example response:" %}</h3>
 						
 						<pre><code class="language-json">{
   "id": "G112233445",
@@ -102,16 +103,16 @@
 					</div>
 					<div class="col-lg-6 api" data-anima="fade-right" data-time="1000">
 					  <div class="cnt-box boxed try-it"> 
-              <h3>Try it out:</h3>
+              <h3>{% trans "Try it out:" %}</h3>
               <form class="from-box form-inline">
                 <input id="id" name="id" placeholder="ID number" class="input-text">
                 <button class="btn btn-sm" type="submit" id="api-submit" disabled>Submit</button>
               </form>
               
               <div id="api-example" style="display: none;">
-                <h4>Request:</h4>
+                <h4>{% trans "Request:" %}</h4>
                 <pre id="api-request"><code class="language-http"></code></pre>
-                <h4>Response:</h4>
+                <h4>{% trans "Response:" %}</h4>
                 <pre id="api-response"><code class="language-json"></code></pre>            
               </div>
             </div>
@@ -121,9 +122,9 @@
 		</section>
 		<section class="section-base section-libraries">
       <div class="container">
-        <h2 id="validation-libraries">Validation Libraries</h2>
-        <p>These libraries cover all forms of legal resident ID numbers. Choose
-        your language:</p>
+        <h2 id="validation-libraries">{% trans "Validation Libraries" %}</h2>
+        <p>{% trans "These libraries cover all forms of legal resident ID numbers. Choose
+        your language:" %}</p>
         <div class="library-languages tab-box tab-vertical" data-tab-anima="fade-in">
           <ul class="tab-nav">
             <li class="active"><a href="#">Javascript</a></li>
@@ -279,16 +280,16 @@ function isValid($id_no)
 			<div class="container">
 			  <div class="row">
           <div class="col-lg-12">
-            <h2 id="transparency-report">Transparency Report</h2>
-            <p>See how online service providers compare.</p>
+            <h2 id="transparency-report">{% trans "Transparency Report" %}</h2>
+            <p>{% trans "See how online service providers compare." %}</p>
             <table class="report-table table table-border">
               <thead>
                 <tr>
                   <th></th>
-                  <th>Category</th>
-                  <th>Updated</th>
-                  <th>Score</th>
-                  <th>Details</th>
+                  <th>{% trans "Category" %}</th>
+                  <th>{% trans "Updated" %}</th>
+                  <th>{% trans "Score" %}</th>
+                  <th>{% trans "Details" %}</th>
                 </tr>
               </thead>
               <tbody>
