--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -40,6 +40,21 @@
             </p>
           </div>
           <div class="col-lg-6 hidden-md" style="width: 100%; height: 100%; background-image: url({% static 'media/phone-wall2.png' %}); background-position: 0 -100px; background-size: 650px;"></div>
+<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <input name="next" type="hidden" value="{{ redirect_to }}">
+    <select name="language">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Go">
+</form>
+
         </div>
       </div>
     </section>
