--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -40,21 +40,18 @@
             </p>
           </div>
           <div class="col-lg-6 hidden-md" style="width: 100%; height: 100%; background-image: url({% static 'media/phone-wall2.png' %}); background-position: 0 -100px; background-size: 650px;"></div>
-<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-    <input name="next" type="hidden" value="{{ redirect_to }}">
-    <select name="language">
         {% get_current_language as LANGUAGE_CODE %}
         {% get_available_languages as LANGUAGES %}
         {% get_language_info_list for LANGUAGES as languages %}
         {% for language in languages %}
-            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                {{ language.name_local }} ({{ language.code }})
-            </option>
-        {% endfor %}
-    </select>
-    <input type="submit" value="Go">
+	{% if language.code != LANGUAGE_CODE %}
+<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+    <input name="language" type="hidden" value="{{ language.code }}">
+    <input name="next" type="hidden" value="{{ redirect_to }}">
+    <input class="btn btn-link" type="submit" value="{{ language.name_local }}">
 </form>
-
+	{% endif %}
+        {% endfor %}
         </div>
       </div>
     </section>
@@ -101,8 +98,7 @@
 					<div class="col-lg-6" data-anima="fade-left" data-time="1000">
 						<h2 id="validation-service">{% translate "Hosted Validation Service" %}</h2>
 						<p>
-							{% translate "This ID number validation API covers all forms of legal resident 
-							ID numbers and is provided free of charge." %}
+						{% translate "This ID number validation API covers all forms of legal resident ID numbers and is provided free of charge." %}
 						</p>
 						
 						<h3>{% translate "Example request:" %}</h3>
@@ -138,8 +134,7 @@
 		<section class="section-base section-libraries">
       <div class="container">
         <h2 id="validation-libraries">{% translate "Validation Libraries" %}</h2>
-        <p>{% translate "These libraries cover all forms of legal resident ID numbers. Choose
-        your language:" %}</p>
+        <p>{% translate "These libraries cover all forms of legal resident ID numbers. Choose your language:" %}</p>
         <div class="library-languages tab-box tab-vertical" data-tab-anima="fade-in">
           <ul class="tab-nav">
             <li class="active"><a href="#">Javascript</a></li>
