add anchor links to main menu

--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -62,7 +62,7 @@
 					<tbody>
 						<tr>
 							<td>
-								<div class="cnt-box cnt-box-top-icon align-center" data-href="#">
+								<div class="cnt-box cnt-box-top-icon align-center" data-href="#validation-service">
 									<i class="im-cloud"></i>
 									<div class="caption">
 										<h2>{% translate "Validation API" %}</h2>
@@ -71,7 +71,7 @@
 								</div>
 							</td>
 							<td>
-								<div class="cnt-box cnt-box-top-icon align-center" data-href="#">
+								<div class="cnt-box cnt-box-top-icon align-center" data-href="#validation-libraries">
 									<i class="im-library-2"></i>
 									<div class="caption">
 										<h2>{% translate "Libraries" %}</h2>
@@ -80,7 +80,7 @@
 								</div>
 							</td>
 							<td>
-								<div class="cnt-box cnt-box-top-icon align-center" data-href="#">
+								<div class="cnt-box cnt-box-top-icon align-center" data-href="#transparency-report">
 									<i class="im-spell-check"></i>
 									<div class="caption">
 										<h2>{% translate "Transparency Report" %}</h2>
