--- a/identity/templates/homepage.html
+++ b/identity/templates/homepage.html
@@ -143,6 +143,7 @@
             <li><a href="#">PHP</a></li>
             <li><a href="#">Go</a></li>
             <li><a href="#">Java</a></li>
+            <li><a href="#">R</a></li>
           </ul>
           <div class="panel active">
             <pre><code class="language-js">ID_REGEX = /^[A-Z]{1}[1-2A-D8-9]{1}[0-9]{8}$/;
@@ -284,6 +285,73 @@ function isValid($id_no)
 }</code></pre>
 
           </div>
+          <div class="panel active">
+            <pre><code class="language-r">#Define Environmental variables
+ID_REGEX <- '^[A-Z]{1}[1-2A-D8-9]{1}[0-9]{8}$'
+ID_LETTERS <- "ABCDEFGHJKLMNPQRSTUVXYWZIO"
+
+# Define function
+isValid <- function(id_no){
+  
+  id_no <- toupper(id_no)
+  regex_pattern <- ID_REGEX
+  
+  if (!grepl(regex_pattern, id_no)){
+    return(FALSE)
+  } 
+  
+  # Convert strings to vector
+  ID_LETTERS_as_vector <- unlist(strsplit(ID_LETTERS,""))
+  id_no_as_vector <- unlist(strsplit(id_no,""))
+  
+  # check if first letter of id is in the ID_LETTERS string
+  # and identify index position
+  first_letter_index <- which(id_no_as_vector[1] == ID_LETTERS_as_vector)
+  
+  # R indices start at 1, but the checksum code I'm translating was written in python
+  # which indexes starting at 0, therefore we need to subtract 1 from the R index
+  # for the python checksum to work
+  first_letter_index <- first_letter_index - 1
+  checksum <- floor(first_letter_index / 10 + 1) + (first_letter_index * 9)
+  
+  
+  # Legacy ARC
+  if (grepl('[A-Z]', id_no_as_vector[2])){
+    
+    second_letter_index <- which(id_no_as_vector[2] == ID_LETTERS_as_vector) -1 # minus 1 again for index conversion
+    checksum <- checksum + ((second_letter_index %% 10) * 8) 
+    
+  } else{
+    
+    checksum = checksum + as.numeric(id_no_as_vector[2]) * 8
+    
+  }
+  
+  for(i in 3:9){
+    # print(id_no_as_vector[i])
+    checksum <- checksum +
+      (10 - i) * # 9 got changed to 10 because of index translation
+      as.numeric(id_no_as_vector[i])
+  }
+  
+  checksum <- checksum + as.numeric(id_no_as_vector[10])
+  
+  if ((checksum %% 10) == 0) {
+    return(TRUE)
+  } else{
+    return(FALSE)
+  }
+  
+}
+
+
+
+
+              </code></pre>
+          </div>
+
+
+
         </div>
       </div>
     </section>
